Fix Css and Function CaretClick on small Device

--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,17 @@ header {
   }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 700px) {
   .header {
     height: 40vh;
   }
   .description {
     top: 66px;
-    font-size: 1.6vw !important;
+    font-size: 1.7vw !important;
     max-width: 58% !important;
+  }
+  .card-title {
+    font-size: 1.9vw !important;
   }
   .home-container {
     margin-top: -107px !important;
@@ -370,6 +373,17 @@ header {
   background-position: center center;
   background-size: cover;
 }
+@media screen and (max-width: 700px) {
+  .card-image {
+    width: 41vw;
+    height: 13vw;
+  }
+  .content-title {
+    font-size: 1.5vw !important;
+    top: -4px !important;
+  }
+}
+
 .card-list {
   padding: 0.5rem;
   transition: transform 0.3s ease-in-out;
